# taiji-agent

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  01-taiji-verify-technical-spec.md  02-class-diagram.mermaid  02-sequence-diagram.mermaid  04-multi-tenant-data-model.md  05-loudi-scenario-tech-plan.md  06-security-compliance-design.md  07-integration-test-plan.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  Taiji-Agent-开发任务书.md  Taiji_Agent_Whitepaper.md  UPGRADE-v2.1-DEPLOYMENT.md  check_code_quality.py  docker-compose.yml  eslint.config.js  govmcp_m4_delivery.md  harness_m3_delivery.md  hermes_m2_delivery.md  integration_test_results.json  package-lock.json  package.json  performance_test_report.md  pyproject.toml  taiji_verify_delivery.md  test_integration_taijiverifypro.py  test_taijiverify_pro.py  test_tui_enhancement.py  ui.html  ui_preview.md  阶段一-分析报告-整合版.md  阶段二-设计文档-审查报告.md  验收报告.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  daily-update.yml  release.yml  security.yml  webhook-notify.yml
.repos/QClaw/: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GAP-ANALYSIS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  install.sh  package-lock.json  package.json  start.bat  start.sh
.repos/QClaw/.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.repos/QClaw/docs/: AGEX_HUB_RAILWAY.md  ARCHITECTURE.md  DASHBOARD_UI.md  DASHBOARD_USABILITY.md  SKILLS.md  (+6 more)
.repos/govmcp/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PROJECT.md  README.md  pyproject.toml
.repos/govmcp/docs/: Makefile
.repos/govmcp/docs/en/: API.md  README.md  SUMMARY.md  __init__.md  approval.md  approval_workflow.md  audit.md  authorization.md  baichuan.md  base.md  carbon_emission.md  citizen_service.md  doubao.md  elicitation.md  enterprise_service.md  environmental.md  http_server.md  hunyuan.md  index.md  minimax.md  moonshot.md  others.md  pangu.md  qwen.md  registry.md  sampling.md  server.md  sm.md  sm2.md  smart_city.md  spark.md  tasks.md  types.md  websocket_server.md  wenxin.md  zhipu.md
.repos/govmcp/docs/source/: conf.py  crypto.rst  index.rst  models.rst  protocol.rst  tools.rst
.repos/govmcp/docs/source/api/: govmcp.rst  index.rst
.repos/govmcp/docs/zh/: ADVANCED.md  API.md  DEPLOYMENT.md  QUICKSTART.md  README.md  SECURITY.md  SUMMARY.md  __init__.md  approval.md  approval_workflow.md  audit.md  authorization.md  baichuan.md  base.md  carbon_emission.md  citizen_service.md  doubao.md  elicitation.md  enterprise_service.md  environmental.md  http_server.md  hunyuan.md  index.md  minimax.md  moonshot.md  others.md  pangu.md  qwen.md  registry.md  sampling.md  server.md  sm.md  sm2.md  smart_city.md  spark.md  tasks.md  websocket_server.md  wenxin.md  zhipu.md
.repos/govmcp/govmcp/: __init__.py
.repos/govmcp/govmcp/crypto/: __init__.py  audit.py  sm.py  sm2.py
.repos/govmcp/govmcp/models/: __init__.py  registry.py
.repos/govmcp/govmcp/models/adapters/: __init__.py  baichuan.py  base.py  doubao.py  hunyuan.py  minimax.py  moonshot.py  others.py  pangu.py  qwen.py  spark.py  wenxin.py  zhipu.py
.repos/govmcp/govmcp/protocol/: __init__.py  authorization.py  elicitation.py  http_server.py  sampling.py  server.py  tasks.py  websocket_server.py
.repos/govmcp/govmcp/server/: __init__.py  approval.py
.repos/govmcp/govmcp/tools/: __init__.py  registry.py
.repos/govmcp/govmcp/tools/government/: __init__.py  approval_workflow.py  carbon_emission.py  citizen_service.py  enterprise_service.py  environmental.py  smart_city.py
.repos/govmcp/govmcp/transport/: __init__.py  base.py
.repos/govmcp/scripts/: __init__.py  gen_api_docs.py  gen_changelog.py  generate_docs.py  update_readme.py
.repos/govmcp/tests/: test_all.py  test_tasks.py  test_transport.py
.repos/harness/: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY_ASSESSMENT.md  docker-compose.yml  package.json  pnpm-lock.yaml  shell.nix  tsconfig.base.json
deliverables/: 01-taiji-agent-analysis.md  02-harness-analysis.md  03-taiji-verify-algorithm-design.md  03-wfgy-protocol-analysis.md  04-govmcp-analysis.md  05-hermes-agent-analysis.md  06-technical-feasibility-assessment.md
design/: 01-taiji-verify-technical-spec.md  02-hermes-provider-grpc.md  03-plugin-system-design.md  05-loudi-scenario-tech-plan.md  06-security-compliance-design.md
docs/: class-diagram.mermaid  sequence-diagram.mermaid  system_design.md  技术说明手册.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
monitoring/: loki.yml  prometheus.yml  promtail.yml
nginx/: nginx.conf
scripts/: generate_readme.py  install-hooks.sh  pre-commit.py
skills/wps-knowledgebase/: SKILL.md
src/opentaiji/: __init__.py  __main__.py
src/taiji_agent/: __init__.py  __main__.py  event_bus.py  gov_enhanced_engine.py  govmcp_bridge.py  govmcp_integration.py  hermes_engine.py  hermes_provider.py  hitl.py  plugin_system.py  sandbox.py  streaming.py
tests/: grpc_conftest.py  stress_test.py  stress_test_production.py  stress_test_v2.py  test_all_systems.py  test_feishu_gateway.py  test_five_layer_integration.py  test_govmcp.py  test_govmcp_integration.py  test_govmcp_server.py  test_grpc_bridge.py  test_harness_integration.py  test_hermes_integration.py  test_multi_tenant.py  test_onboarding_parity.py  test_out_of_box_e2e.py  test_security.py  test_taiji_verify.py  test_taiji_verify_full.py  test_taiji_verify_stress.py  test_v2_features.py
(+282 files in other folders)
