[project]
name = "taiji_agent"
version = "2.0.0"
description = "Taiji Agent 2.0 - 融合Hermes Agent全部功能的AI智能体框架，基于太极哲学和WFGY防幻觉"
authors = [{name = "Taiji Agent Team", email = "team@taiji-agent.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "agent", "hermes", "harness", "wfgy", "hallucination", "llm", "taiji"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.50.0,<2.0.0",
    "anthropic>=0.40.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "rich>=13.9.0,<14.0.0",
    "httpx>=0.28.0,<1.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "fire>=0.7.0,<1.0.0",
    "exa-py>=2.9.0,<3.0.0",
    "firecrawl-py>=4.16.0,<5.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "tiktoken>=0.8.0,<1.0.0",
    "watchdog>=6.0.0,<7.0.0",
    "click>=8.1.0,<9.0.0",
    "typer>=0.14.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.14.0,<2.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "ipython>=8.30.0,<10.0.0",
    "debugpy>=1.8.0,<2.0.0",
    "psutil>=6.0.0,<7.0.0",
]
messaging = [
    "python-telegram-bot>=22.6,<23.0",
    "discord.py>=2.7.0,<3.0.0",
    "slack-sdk>=3.27.0,<4.0.0",
    "aiohttp>=3.10.0,<4.0.0",
    "dingtalk-stream>=0.1.0,<1.0.0",
    "lark-oapi>=1.5.0,<2.0.0",
]
voice = [
    "edge-tts>=7.0.0,<8.0.0",
    "faster-whisper>=1.0.0,<2.0.0",
    "sounddevice>=0.5.0,<1.0.0",
]
browser = [
    "playwright>=1.48.0,<2.0.0",
    "selenium>=4.25.0,<5.0.0",
]
all = [
    "taiji_agent[dev,messaging,voice,browser]",
]

[project.scripts]
taiji-agent = "taiji_agent.cli:main"
taiji-agent-cli = "taiji_agent.agent:main"

[project.urls]
Homepage = "https://github.com/xiejianjun000/taiji-agent"
Documentation = "https://github.com/xiejianjun000/taiji-agent"
Repository = "https://github.com/xiejianjun000/taiji-agent"
Issues = "https://github.com/xiejianjun000/taiji-agent/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/taiji_agent"]
branch = true
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
