[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "govmcp"
version = "1.0.0"
description = "国产信创MCP协议 — 国密加密 + 审批工作流 + 不可篡改审计链"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "OpenTaiji Team"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.9.0,<1",
    "mypy>=1.2.0,<2",
]
full = [
    "gmssl>=3.2",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme",
    "myst-parser",
]
ws = [
    "websockets>=12.0",
]
http = [
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://git.opentaiji.com/opentaiji/govmcp"
Documentation = "https://govmcp.opentaiji.com"
Repository = "https://git.opentaiji.com/opentaiji/govmcp"

[tool.setuptools.packages.find]
include = ["govmcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
]
ignore = [
    "E501",     # line too long
    "F401",     # unused imports (dynamic imports, etc.)
    "F821",     # undefined name (lazy imports)
    "F841",     # unused variable
    "N802",     # function name should be lowercase
    "N806",     # variable in function should be lowercase
    "B904",     # raise in try block
    "B905",     # max-complexity
    "B027",     # empty except
    "T1",       # test fixture
    "T2",       # test modifier
    "S1",       # security
    "S2",       # security
    "W1",       # undefined-export
    "E402",     # module level import not at top of file
    "C401",     # un import
    "UP035",    # deprecated typing (List -> list, etc.)
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cryptography.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gmssl.*"
ignore_missing_imports = true
